fixed missalignments

--- a/src/less/_components.less
+++ b/src/less/_components.less
@@ -323,7 +323,7 @@
       line-height: 1.37;
       font-size: 13px;
       font-family: 'Roboto-Light', sans-serif;
-      font-weight: 500;
+      font-weight: 400;
       padding-right: 10px;
       width: 100%;
       height: 100%;
@@ -368,7 +368,7 @@
       line-height: 1.5;
     }
     &:nth-child(3) &-orientation {
-      transform: translateX(-2px);
+      transform: translateX(-1px);
     }
 
 
@@ -470,7 +470,7 @@
   }
   &__control {
     position: absolute;
-    transform: translateX(-13px) translateY(-1px);
+    transform: translateX(-12px) translateY(-1px);
     top: 5px;
     &-container {
       height: 60px;
