--- a/src/less/_sections.less
+++ b/src/less/_sections.less
@@ -143,7 +143,7 @@
     font-family: 'Roboto-Light', sans-serif;
     font-weight: 400;
     font-size: 30px;
-    margin-top: 28px;
+    margin-top: 27px;
 
     .media-adaptive({
       padding: 0 1rem;
@@ -167,7 +167,7 @@
 .about {
   &__header {
     .display-flex('column');
-    margin-top: 42px;
+    margin-top: 43px;
     flex-wrap: nowrap;
     max-width: 100%;
   }
